[project]
name = "lang-chain-sample"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.14",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "asttokens==3.0.0",
    "attrs==25.3.0",
    "certifi==2025.7.14",
    "charset-normalizer==3.4.2",
    "colorama==0.4.6",
    "decorator==5.2.1",
    "distro==1.9.0",
    "executing==2.2.0",
    "frozenlist==1.7.0",
    "greenlet==3.2.3",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.10",
    "ipython==9.4.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "jiter==0.10.0",
    "json-repair==0.40.0",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "langchain==0.3.26",
    "langchain-core==0.3.70",
    "langchain-deepseek==0.1.3",
    "langchain-ollama==0.3.5",
    "langchain-openai==0.3.28",
    "langchain-qwq==0.2.0",
    "langchain-tavily==0.2.10",
    "langchain-text-splitters==0.3.8",
    "langgraph==0.5.4",
    "langgraph-checkpoint==2.1.1",
    "langgraph-prebuilt==0.5.2",
    "langgraph-sdk==0.1.74",
    "langsmith==0.4.8",
    "matplotlib-inline==0.1.7",
    "multidict==6.6.3",
    "ollama==0.5.1",
    "openai==1.97.0",
    "orjson==3.11.0",
    "ormsgpack==1.10.0",
    "packaging==25.0",
    "parso==0.8.4",
    "prompt-toolkit==3.0.51",
    "propcache==0.3.2",
    "pure-eval==0.2.3",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pygments==2.19.2",
    "python-dotenv==1.1.1",
    "pyyaml==6.0.2",
    "regex==2024.11.6",
    "requests==2.32.4",
    "requests-toolbelt==1.0.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.41",
    "stack-data==0.6.3",
    "tenacity==9.1.2",
    "tiktoken==0.9.0",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "typing-extensions==4.14.1",
    "typing-inspection==0.4.1",
    "urllib3==2.5.0",
    "wcwidth==0.2.13",
    "xxhash==3.5.0",
    "yarl==1.20.1",
    "zstandard==0.23.0",
]
